fixed bug 24186 (well, fixed it enough for beta at least.  see bug for details) r=troy