layout/html/base/src/nsLineLayout.h
@@ -25,6 +25,8 @@
 #include "nsFrame.h"
 #include "nsVoidArray.h"
 #include "nsTextRun.h"
+#include "nsIFontMetrics.h"
+#include "nsCOMPtr.h"
 
 class nsISpaceManager;
 class nsBlockReflowState;
@@ -331,6 +333,8 @@ public:
     PRPackedBool mChangedFrameDirection;
     PRPackedBool mZeroEffectiveSpanBox;
     PRPackedBool mContainsFloater;
+    PRPackedBool mIgnoreMinLineHeight;
+    nsCOMPtr<nsIFontMetrics> mQuirksModeFontMetrics;
 
     nscoord mLeftEdge;
     nscoord mX;
@@ -397,6 +401,19 @@ protected:
   void UpdateFrames();
 
   void VerticalAlignFrames(PerSpanData* psd);
+
+  /** compute the data needed to adjust the line height (in VerticalAlignFrames)
+    * primarily in quirks (Nav4 compatibility) mode.
+    * @param aRC      the rendering context for the span
+    * @param aPSD     PerSpanData object for the current span
+    * @param aFrame   the frame at which the computation should begin
+    * @param aIgnore  [OUT] PR_TRUE indicates that the block's min height should be ignored
+    *                       PR_FALSE indicates that the block's min height still has effect
+    */
+  void ComputeQuirksModeLineHeightData(nsIRenderingContext *aRC, 
+                                       PerSpanData *aPSD, 
+                                       nsIFrame    *aFrame, 
+                                       PRBool      *aIgnore);
 
   void PlaceTopBottomFrames(PerSpanData* psd,
                             nscoord aDistanceFromTop,
